Bug 364345 - Calendar doesn't show holidays specified for multiple days
Summary: Calendar doesn't show holidays specified for multiple days
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Digital Clock widget (other bugs)
Version First Reported In: master
Platform: Other Linux
: NOR normal
Target Milestone: 1.0
Assignee: Martin Klapetek
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-06-15 12:41 UTC by Martin Flöser
Modified: 2016-06-16 09:41 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Flöser 2016-06-15 12:41:32 UTC
If a holiday is specified for multiple days it's only shown on the first day. The following days of the holiday are not shown.

In the KHolidays config file the holiday is specified correctly

Reproducible: Always

Steps to Reproduce:
1. Select e.g. Holiday region Germany
2. Navigate calendar to March 27
3. Observe it says "Ostern"
4. Navigate calendar to March 28

Actual Results:  
Ostern not shown

Expected Results:  
Ostern shown

Also in the calender overview the marking for event is missing.
Comment 1 Kai Uwe Broulik 2016-06-16 09:41:18 UTC
Git commit 7ab1f6d33b6aa06adf3dfece204068192216d94e by Kai Uwe Broulik.
Committed on 16/06/2016 at 09:40.
Pushed by broulik into branch 'master'.

[Holiday Events] Handle holidays spanning multiple days

We are told the start and end date but we didn't actually add the event to the other days.

Differential Revision: https://phabricator.kde.org/D1891

M  +4    -1    plasmacalendarintegration/holidaysevents.cpp

http://commits.kde.org/plasma-workspace/7ab1f6d33b6aa06adf3dfece204068192216d94e