[Holiday Events] Handle holidays spanning multiple days

We are told the start and end date but we didn't actually add the event to the other days.

BUG: 364345

Differential Revision: https://phabricator.kde.org/D1891